# orpheus

./: .gitignore  Cargo.toml  README.md  window.txt
logs/: tui.log.2026-01-28-20
src/: auth.rs  config.rs  main.rs  terminal.rs
src/internal/: config.rs  image.rs  mod.rs  text.rs
src/internal/lyrics/: mod.rs  model.rs
src/io/: key.rs  mod.rs
src/spotify/: config.rs  mod.rs
src/state/: mod.rs
src/state/handler/: mod.rs  playlist.rs
src/tui/: colours.rs  keyboard.rs  mod.rs
src/tui/components/: mod.rs  player.rs  playlist.rs  search.rs  volume.rs
src/tui/state/: mod.rs  player.rs  playlist.rs  search.rs
src/ui/: mod.rs  playlist.rs  style.rs
