[package]
name = "orpheus"
description = "A TUI client for Spotify"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29.0"
rspotify = "0.10.0"
tokio = { version = "0.2.25", features = ["full"] }
dotenv = "0.15.0"
anyhow = "1.0.93"
reqwest = { version = "0.10", features = ["blocking", "native-tls-vendored", "json"] }
image = "0.25.5"
font8x8 = "0.3.1"
deunicode = "1.6.0"
thiserror = "2.0.3"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
scraper = "0.22.0"
